# gil-mtg

./: Cargo.toml  Dockerfile
src/: guilded.rs  http.rs  lib.rs  main.rs  scryfall.rs
src/guilded/: client.rs
