[package]
name = "mtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
url = "2.2.2"
http = "0.2.7"
futures-util = "0.3.21"
serde_json = "1.0"
serde_repr = "0.1.8"
anyhow = "1.0.57"
thiserror = "1.0.31"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.18.2"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "0.17.1"
features = ["connect", "native-tls"]
